--- a/menu.html
+++ b/menu.html
@@ -181,7 +181,7 @@
 
         <button class="burger" id="burger" aria-haspopup="true" aria-expanded="false" aria-controls="navPop">☰</button>
         <nav class="nav-pop" id="navPop" role="menu" aria-label="Main menu">
-          <a href="#" id="navHome" role="menuitem">🏠 HOME</a>
+          <a href="index.html" id="navHome" role="menuitem">🏠 HOME</a>
           <a href="#" id="navMenu" role="menuitem">🍜 MENU</a>
           <a href="#" id="navKaraoke" role="menuitem">🎤 KARAOKE</a>
           <a href="#" id="navContact" role="menuitem">📞 KONTAKT</a>
