Обновил галерею и видео фон

--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
     .gallery img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
-      border-radius: 14px;
+      object-fit: cover;   /* картинка полностью заполняет квадрат, обрезается лишнее */
+      border-radius: 14px; /* скругление как у карточек */
+      display: block;
     }
+
 
   </style>
 </head>
